# myRanges

./: .ccls  1.cpp  2.cpp  CMakeLists.txt  makefile  ranges.hpp  readme.md
doc/: 1-框架.md  2-ref_view.md
g++10_org_ranges_src/: ranges
learn/: is_array_v.cpp  make_unsigned.cpp  makefile
src/: miniRanges.hpp  ranges.hpp  ranges_concept.hpp
test/: miniRanges1.cpp  view_all.cpp
test_snip/: is_lambda_default_constructible_v.cpp  user_defined_deduction_guides.cpp
